# nli-reasoning

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  test_path_validation.py  validate_imports.py
src/: main.py
src/data/: __init__.py  dataset.py
src/models/: __init__.py  config.py  loader.py
src/rewards/: __init__.py
src/training/: __init__.py  grpo_config.py  trainer.py
src/utils/: evaluations.py  memory.py
tests/: test_data.py
